Colaboratory를 통해 생성됨

--- a/prediction_of_quality_of_wine_white.ipynb
+++ b/prediction_of_quality_of_wine_white.ipynb
@@ -6,7 +6,7 @@
       "name": "prediction of quality of wine_white.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPC6QyL3wQlO1Sr2cIu+0w6",
+      "authorship_tag": "ABX9TyP/YO6IyOjK+zQ6N3jidher",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,26 +102,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 가설\n"
+        "## 프로젝트 설명\n"
       ],
       "metadata": {
         "id": "WQOkMxU_L6oh"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Model\n",
-        "1. Random Forest Classifier\n",
-        "2. Stochastic Gradient Descent Classifier\n",
-        "3. Support Vector Classifier\n",
-        "\n",
-        "Model Performance\n",
-        "1. Grid Search CV\n",
-        "2. Cross Validation Score"
-      ],
-      "metadata": {
-        "id": "N9LK76ejK4PL"
       }
     },
     {
@@ -186,7 +170,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# data load\n",
+        "# 데이터 로드하기\n",
         "wine_data = pd.read_csv('/content/red-wine-quality-cortez-et-al-2009.zip')"
       ],
       "metadata": {
@@ -209,11 +193,16 @@
     {
       "cell_type": "code",
       "source": [
-        "wine_data.info()\n",
-        "wine_data.shape\n",
-        "wine_data.describe()\n",
-        "wine_data.quality.unique()\n",
-        "wine_data.quality.value_counts()"
+        "print(wine_data.info())\n",
+        "print('====================================================================================')\n",
+        "print('Wine data shape:', wine_data.shape)\n",
+        "print('====================================================================================')\n",
+        "print(wine_data.describe())\n",
+        "print('====================================================================================')\n",
+        "print('Quality Unique Values:', wine_data.quality.unique())\n",
+        "print('====================================================================================')\n",
+        "print('Quality Value counts')\n",
+        "print(wine_data.quality.value_counts())"
       ],
       "metadata": {
         "id": "FL2rFKwtYc-L"
@@ -224,7 +213,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 상관관게 분석\n",
+        "# 상관관게 분석_각 변수별로 상관관계를 가지는 지 확인\n",
         "corr_wine = wine_data.corr()\n",
         "corr_wine = corr_wine.apply(lambda x: round(x, 2))\n",
         "corr_wine\n",
@@ -245,6 +234,19 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Quality, alcohol 양의 상관관계(0.5)\n",
+        "- Sulphates, chlorides 양의 상관관계(0.4)\n",
+        "- density, fixed acidity 양의 상관관계(0.7)\n",
+        "- total, free sulfur dioxide 양의 상관관계(0.7) => 비슷한 성분으로 유의미하지 않음\n",
+        "- citric acid, fixed acidity 양의 상관관계(0.7)\n"
+      ],
+      "metadata": {
+        "id": "1Q6fmoK1Cdq5"
+      }
     },
     {
       "cell_type": "code",
@@ -382,6 +384,64 @@
     {
       "cell_type": "code",
       "source": [
+        "# plot_1: value_counts를 시각화\n",
+        "sns.countplot(x='quality', data = wine_data)"
+      ],
+      "metadata": {
+        "id": "vyLtqPDtDsO8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# plot_2: 종모양을 띄는 지 확인 = 정규성 만족하는지\n",
+        "sns.displot(wine_data['quality'])"
+      ],
+      "metadata": {
+        "id": "MZUyd5GCFxco"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# plot_3: 정규성 확인\n",
+        "import scipy.stats as stats\n",
+        "stats.probplot(wine_data['quality'], plot=plt)"
+      ],
+      "metadata": {
+        "id": "lp5VLfmCFpl0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- 데이터가 작아서 원하는 그래프 모양으로 확인하지 못함\n",
+        "- plot_2에서 종모양을 띄고 plot_3에서 빨간선에 가깝게 그려졌기 때문에 가우시안 정규 분포를 따른다고 볼수 있음"
+      ],
+      "metadata": {
+        "id": "2-znXoFIEINf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "## Class 분류하기\n",
+        "- 클래스가 대략 8개 정도 되는데 너무 많기 때문에 클래수를 bad, average, excellent로 구분지어서 명확하게 확인할 수 있게 클래스 분류"
+      ],
+      "metadata": {
+        "id": "eP1OYNJ2GrMd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "'''\n",
         "review values 나누기\n",
         "1, 2, 3 -> Bad == 1\n",
@@ -433,6 +493,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Train-Test Split"
+      ],
+      "metadata": {
+        "id": "1Wu8FkYhHEkK"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "x = wine_data.iloc[:, :11]\n",
@@ -445,14 +514,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### StandardSacler\n",
+        "- 변수들이 너무 스케일이 다르기 때문에 데이터 스케일 조정 필요\n",
+        "- 평균 0, 분산 1로 조정"
+      ],
+      "metadata": {
+        "id": "JDRKroI8HN-Z"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "'''\n",
-        "StandardSacler\n",
-        "- 변수들이 너무 스케일이 다르기 때문에 데이터 스케일 조정 필요\n",
-        "- 평균 0, 분산 1로 조정\n",
-        "'''\n",
-        "\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "sc = StandardScaler()\n",
         "sc_x = sc.fit_transform(x)\n",
@@ -465,16 +539,21 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "'''\n",
-        "PCA\n",
+        "### PCA\n",
         "- 차원의 저주: 머신러닝 훈련 샘플이 각각 수백만개의 특성을 가지고 있을때\n",
         "  유의미한 특성을 찾기가 어렵고 훈련을 느리게 하기 때문에 결과적으로 성능저하를 야기함\n",
         "- PCA를 통해서 분산을 최대로 보존할 수 있는 축을 선택해 정보를 가장 적게 손실함\n",
-        "즉, 분산이 최대인 축을 찾고, 이 첫번째 축에 직교하고 남은 분산을 최대한 보존하는 2번째 축을 찾는다\n",
-        "'''\n",
-        "\n",
+        "즉, 분산이 최대인 축을 찾고, 이 첫번째 축에 직교하고 남은 분산을 최대한 보존하는 2번째 축을 찾는다"
+      ],
+      "metadata": {
+        "id": "gyOkYVqdHUSl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from sklearn.decomposition import PCA\n",
         "import numpy as np\n",
         "pca = PCA()\n",
@@ -504,11 +583,20 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 훈련, 테스트 데이터로 분리"
+      ],
+      "metadata": {
+        "id": "3XtN2dmtHd9H"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "x_train, x_test, y_train, y_test = train_test_split(new_x, y, test_size=0.25)\n",
+        "x_train, x_test, y_train, y_test = train_test_split(new_x, y, test_size=0.25, random_state=0)\n",
         "\n",
         "print(x_train.shape)\n",
         "print(y_train.shape)\n",
@@ -524,9 +612,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Machine Learning Algorithms\n",
+        "# Machine Learning\n",
+        "\n",
+        "### 다중 분류 문제 (Multi class classification)\n",
+        "\n",
+        "### 모델 평가: accuracy, F-score\n",
+        "\n",
+        "### 머신러닝 알고리즘\n",
         "\n",
         "1. Logistic Regression\n",
+        " - 소프트맥스 함수를 사용해 다중분류\n",
+        "\n",
         "2. Decision Trees\n",
         "3. Naive Bayes\n",
         "4. Random Forests\n",
@@ -537,14 +633,30 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#### Logistic Regression"
+      ],
+      "metadata": {
+        "id": "0zyC65iliJXk"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.model_selection import GridSearchCV\n",
         "from sklearn.metrics import confusion_matrix, accuracy_score\n",
         "\n",
-        "lr = LogisticRegression()\n",
-        "lr.fit(x_train, y_train)\n",
-        "lr_predict = lr.predict(x_test)"
+        "# 파라미터 후보\n",
+        "parameters = {'C':[0.001, 0.01, 0.1, 1, 10, 100], # C값 작으면=> penalty 강해짐(단순모델)/C값 크면=> penalty 약해짐(정규화 없어짐)\n",
+        "              'max_iter' : [100,1000],\n",
+        "              'penalty' : ['l1', 'l2']}\n",
+        "\n",
+        "# 그리드 서치 진행\n",
+        "grid_search = GridSearchCV(LogisticRegression(), parameters, cv=5)\n",
+        "grid_search.best_params_\n",
+        "#{'C': 1, 'max_iter': 1000, 'penalty': 'l2'}"
       ],
       "metadata": {
         "id": "NTIyULrGmwbm"
@@ -555,8 +667,21 @@
     {
       "cell_type": "code",
       "source": [
-        "lr_conf_matrix = confusion_matrix(y_test, lr_predict)\n",
-        "lr_acc_score = accuracy_score(y_test, lr_predict)\n",
+        "best_logistic_model = grid_search.fit(x_train, y_train)\n",
+        "best_logistic_pred = best_logistic_model.predict(x_test)\n",
+        "grid_search.score(x_test, y_test) # 0.8525"
+      ],
+      "metadata": {
+        "id": "eOxDiVNqhDc-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lr_conf_matrix = confusion_matrix(y_test, best_logistic_pred)\n",
+        "lr_acc_score = accuracy_score(y_test, best_logistic_pred)\n",
         "print(lr_conf_matrix)\n",
         "print(lr_acc_score*100)"
       ],
@@ -565,6 +690,30 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 로지스틱 회귀 f1_score 확인\n",
+        "from sklearn import metrics \n",
+        "print('precision: ', metrics.precision_score(y_test, best_logistic_pred, average='micro'))\n",
+        "print('recall: ', metrics.recall_score(y_test, best_logistic_pred, average='micro'))\n",
+        "print('f1_socre: ', metrics.f1_score(y_test, best_logistic_pred, average='micro'))"
+      ],
+      "metadata": {
+        "id": "wlsnaKkmifZ5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### DecisionTreeClassifier"
+      ],
+      "metadata": {
+        "id": "maGIzx9ziPmX"
+      }
     },
     {
       "cell_type": "code",
