Colaboratory를 통해 생성됨

--- a/prediction_of_quality_of_wine_white.ipynb
+++ b/prediction_of_quality_of_wine_white.ipynb
@@ -6,7 +6,7 @@
       "name": "prediction of quality of wine_white.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP/YO6IyOjK+zQ6N3jidher",
+      "authorship_tag": "ABX9TyN7ntyLll/mDKnRqmuE5l8j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -624,9 +624,13 @@
         " - 소프트맥스 함수를 사용해 다중분류\n",
         "\n",
         "2. Decision Trees\n",
+        " - 데이터 균일도에 따른 규칙 기반\n",
         "3. Naive Bayes\n",
+        " - 베이즈 통계와 생성 모델에 기반 \n",
         "4. Random Forests\n",
-        "5. SVM"
+        " - 앙상블, 일반화된 트리 모델\n",
+        "5. SVM\n",
+        " - 최적의 결정경계로 분류 하는 모델"
       ],
       "metadata": {
         "id": "H7ps35WsnApo"
@@ -635,7 +639,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Logistic Regression"
+        "#### Logistic Regression\n",
+        "\n"
       ],
       "metadata": {
         "id": "0zyC65iliJXk"
@@ -649,7 +654,7 @@
         "from sklearn.metrics import confusion_matrix, accuracy_score\n",
         "\n",
         "# 파라미터 후보\n",
-        "parameters = {'C':[0.001, 0.01, 0.1, 1, 10, 100], # C값 작으면=> penalty 강해짐(단순모델)/C값 크면=> penalty 약해짐(정규화 없어짐)\n",
+        "parameters = {'C':[0.001, 0.01, 0.1, 1, 10, 100], # C값 작으면=> penalty 강해짐(단순모델, 오류를 허용함)/C값 크면=> penalty 약해짐(정규화 없어짐, 오류 허용 안 함)\n",
         "              'max_iter' : [100,1000],\n",
         "              'penalty' : ['l1', 'l2']}\n",
         "\n",
@@ -683,7 +688,7 @@
         "lr_conf_matrix = confusion_matrix(y_test, best_logistic_pred)\n",
         "lr_acc_score = accuracy_score(y_test, best_logistic_pred)\n",
         "print(lr_conf_matrix)\n",
-        "print(lr_acc_score*100)"
+        "print('검증 정확도:', lr_acc_score*100)"
       ],
       "metadata": {
         "id": "1MhHmNUgsu-o"
@@ -709,7 +714,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### DecisionTreeClassifier"
+        "#### Decision Tree Classifier"
       ],
       "metadata": {
         "id": "maGIzx9ziPmX"
@@ -744,6 +749,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#### Naive Bayes"
+      ],
+      "metadata": {
+        "id": "ojvTgHXklvim"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.naive_bayes import GaussianNB\n",
@@ -772,15 +786,54 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#### Random Forests"
+      ],
+      "metadata": {
+        "id": "ILlqpOnkl8SY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install category_encoders"
+      ],
+      "metadata": {
+        "id": "t8tjLx3esCi0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "from category_encoders import OneHotEncoder\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.pipeline import make_pipeline"
+      ],
+      "metadata": {
+        "id": "aYzGeHJ-rl9G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
-        "rf = RandomForestClassifier()\n",
-        "rf.fit(x_train, y_train)\n",
-        "rf_predict = rf.predict(x_test)"
+        "rf_pipe = make_pipeline(\n",
+        "    OneHotEncoder(use_cat_names=True),\n",
+        "    SimpleImputer(),\n",
+        "    RandomForestClassifier(n_jobs=-1, random_state=10, oob_score=True)\n",
+        ")\n",
+        "rf_pipe.fit(x_train, y_train)\n",
+        "rf_predict = rf_pipe.predict(x_test)"
       ],
       "metadata": {
-        "id": "KsFe8elmwo88"
+        "id": "jVYSEawtsKvB"
       },
       "execution_count": null,
       "outputs": []
@@ -791,13 +844,42 @@
         "rf_conf_matrix = confusion_matrix(y_test, rf_predict)\n",
         "rf_acc_score = accuracy_score(y_test, rf_predict)\n",
         "print(rf_conf_matrix)\n",
-        "print(rf_acc_score*100)"
+        "print('검증 정확도:', rf_acc_score*100)"
       ],
       "metadata": {
-        "id": "awVFTDC5x3Wz"
+        "id": "rE19FJ1Puthp"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 특성 중요도\n",
+        "\n",
+        "rf = rf_pipe.named_steps['randomforestclassifier']\n",
+        "colnames = rf_pipe.named_steps['onehotencoder'].get_feature_names()\n",
+        "importances = pd.Series(rf.feature_importances_, colnames)\n",
+        "\n",
+        "n = 10\n",
+        "plt.figure(figsize=(10, n/4))\n",
+        "plt.title(f'Top {n} features with onehotencoder')\n",
+        "importances.sort_values()[-n:].plot.barh();"
+      ],
+      "metadata": {
+        "id": "BekWKoIttCir"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Support Vector Machine"
+      ],
+      "metadata": {
+        "id": "T4sYcTbwmAx3"
+      }
     },
     {
       "cell_type": "code",
@@ -824,17 +906,6 @@
       ],
       "metadata": {
         "id": "o6OBMjwky_XQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "-XnP_MeDzWpQ"
       },
       "execution_count": null,
       "outputs": []
